--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eFootball Controller Setup Utility</title>
-    <meta name ="google-site-verification: google94b67d48463d0f03.html" />
+    <meta name="google-site-verification" content="google4b67d8d6463d8f03.html" /> 
     <style>
-        /* General Styling */
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #1a1a1a;
@@ -477,5 +477,6 @@
     </style>
     
     ```
+
 
 
