--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eFootball Controller Setup Utility</title>
-    <meta name="google-site-verification: google94b67d48463d0f03.html" /> 
+    <meta name="google-site-verification" content="hz8vw6QD3rGZR9Y_XVSPYtAUTGNGECdv8Vo2KqIKQqU" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -477,6 +477,7 @@
     </style>
     
     ```
+
 
 
 
